--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Таблица стилей светлой темы -->
+  <link href="css/light.css" rel="stylesheet" id="theme-link">
 	<title>GAME</title>
 
     <!-- Yandex Games SDK -->
@@ -19,14 +20,15 @@
 	   <div class="init">
         <div class="center1">
             <h1>WELCOME!</h1>
-            <p>Нажмите на каждый квадрат, чтобы занять клетку. Вы должны поторопиться, иначе робот победит!</p>
+            <p>Займите все клетки быстрее противника</p>
             <p class="floating bold">НАЧАТЬ ИГРУ</p>
+             <button class="btn-toggle">СМЕНИТЬ ТЕМУ</button>
         </div>
     </div>
     <div class="won">
         <div class="center">
             <h1>ВЫ ПОБЕДИЛИ!</h1>
-            <p class="floating replay bold">ПРОДОЛЖИТЬ ИГРУ</p>
+            <p class="floating replay bold">ИГРАТЬ СНОВА</p>
         </div>
     </div>
     <div class="init hidden"><h1 class="center">СКОРОСТЬ УВЕЛИЧЕНА!</h1></div>
@@ -35,5 +37,7 @@
         <div class="game"></div>
     </div>  
      <script src="js/script.js"></script>
+     <script src="js/theme.js"></script>
+     
 </body>
 </html>
