--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="init hidden"><h1 class="center">СКОРОСТЬ УВЕЛИЧЕНА!</h1></div>
-   <!-- <h2 class="counter">Level: 1</h2> -->
+    <h2 class="counter">Уровень: 1</h2>
     <div class="container">
         <div class="game"></div>
     </div>  
