--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="won">
         <div class="center">
             <h1>ВЫ ПОБЕДИЛИ!</h1>
-            <p class="floating replay bold">ИГРАТЬ СНОВА</p>
+            <p class="floating replay bold">СЛЕДУЮЩИЙ УРОВЕНЬ</p>
         </div>
     </div>
     <div class="init hidden"><h1 class="center">СКОРОСТЬ УВЕЛИЧЕНА!</h1></div>
