--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     });
 </script>
 
+	<script>
+    if (localStorage.getItem("pref-theme") === "light") {
+        document.body.classList.remove('dark')
+    }
+
+</script>
+
 </head>
 <body>
 	   <div class="init">
